# shape-of-motion

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  launch_davis.py  pyproject.toml  render_tracks.py  requirements.txt  run_rendering.py  run_training.py  run_video.py  vis_depths.py
.dev/: pre-commit
flow3d/: colmap_utils.py  configs.py  data_utils.py  init_model.py  init_utils.py  iphone_dataset.py  loss_utils.py  metrics.py  params.py  renderer.py  scene_model.py  tensor_dataclass.py  trainer.py  trajectories.py  transforms.py  validator.py  vis_utils.py  visualizer.py
flow3d/data/: __init__.py  base_dataset.py  casual_dataset.py  colmap.py  davis_dataset.py  iphone_dataset.py  utils.py
flow3d/vis/: playback_panel.py  render_panel.py  utils.py  viewer.py
preproc/: README.md  compute_depth.py  compute_metric_depth.py  compute_normal.py  compute_tracks_jax.py  compute_tracks_pairwise.py  compute_tracks_torch.py  droid_env.yaml  extract_frames.py  launch_depth.py  launch_metric_depth.py  launch_slam.py  launch_tracks.py  mask_app.py  mask_utils.py  process_custom.py  recon_with_depth.py  requirements_extra.txt  setup_dependencies.sh
preproc/tapnet_torch/: nets.py  tapir_model.py  transforms.py  utils.py
preproc/tracker/: base_tracker.py
preproc/tracker/inference/: inference_core.py  kv_memory_store.py  memory_manager.py
preproc/tracker/model/: aggregate.py  cbam.py  group_modules.py  (+5 more)
scripts/: batch_eval_ours_iphone_gcp.sh  evaluate_iphone.py
src/: init_model.py  init_utils.py  loss_utils.py  metrics.py  tensor_dataclass.py  transforms.py
(+3 files in other folders)
